# reality

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: audio.rs  gamepad.rs  log.rs  main.rs
system/: Cargo.toml
system/src/: audio.rs  cpu.rs  gfx.rs  header.rs  interrupt.rs  lib.rs  memory.rs  mips_interface.rs  peripheral.rs  pif.rs  rdp.rs  rdram.rs  rsp.rs  serial.rs  video.rs
system/src/audio/: regs.rs
system/src/cpu/: cache.rs  cp0.rs  cp1.rs  dc.rs  ex.rs  instruction.rs
system/src/cpu/cp0/: error.rs  ex.rs  exception.rs  instruction.rs  regs.rs  tlb.rs
system/src/cpu/cp0/ex/: misc.rs  tlb.rs  transfer.rs
system/src/cpu/cp0/instruction/: tlb.rs  transfer.rs
system/src/cpu/cp1/: ex.rs  instruction.rs  regs.rs
system/src/cpu/cp1/ex/: arithmetic.rs  branch.rs  compare.rs  convert.rs  transfer.rs
system/src/cpu/cp1/instruction/: arithmetic.rs  branch.rs  compare.rs  convert.rs  transfer.rs
system/src/cpu/ex/: arithmetic.rs  bitwise.rs  compare.rs  control.rs  exception.rs  load.rs  misc.rs  mul_div.rs  shift.rs  store.rs
system/src/cpu/instruction/: arithmetic.rs  bitwise.rs  compare.rs  control.rs  exception.rs  load.rs  misc.rs  mul_div.rs  shift.rs  store.rs
system/src/mips_interface/: regs.rs
system/src/peripheral/: regs.rs
system/src/rdp/: core.rs  decoder.rs  regs.rs  renderer.rs  renderer.wgsl
system/src/rdp/core/: image.rs  mode.rs  param.rs  rect.rs  sync.rs  tmem.rs  triangle.rs
system/src/rdp/decoder/: mode.rs  param.rs  rect.rs  sync.rs  target.rs  tmem.rs  triangle.rs
system/src/rdp/renderer/: blender.rs  combiner.rs  display_list.rs  pipeline.rs  target.rs  tmem.rs
system/src/rdp/renderer/tmem/: texture.rs  tile_view.rs
system/src/rdram/: regs.rs
system/src/rsp/: core.rs  regs.rs
system/src/rsp/core/: cp0.rs  cp2.rs  dc.rs  df.rs  ex.rs  instruction.rs
system/src/rsp/core/cp0/: ex.rs  instruction.rs
system/src/rsp/core/cp2/: ex.rs  instruction.rs  regs.rs
system/src/rsp/core/ex/: bitwise.rs  (+7 more)
system/src/serial/: joybus.rs  pif.rs  regs.rs
system/src/video/: framebuffer.rs  regs.rs  upscaler.rs  upscaler.wgsl
(+20 files in other folders)
