[package]
name = "system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield-struct = "0.6.0"
bitflags = "2.5.0"
bytemuck = { version = "1.15.0", features = ["must_cast", "derive"] }
num-traits = "0.2.18"
pollster = "0.3.0"
tracing = { version = "0.1.40", features = ["release_max_level_info"] }
wgpu = "0.19.3"
