[package]
name = "system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
bitfield-struct = "0.6.0"
bitflags = "2.5.0"
bytemuck = { version = "1.15.0", features = ["must_cast", "derive"] }
crc = "3.2.1"
futures-intrusive = "0.5.0"
num-traits = "0.2.18"
phf = { version = "0.11.2", features = ["phf_macros", "macros"] }
pod-enum = "0.1.0"
pollster = "0.3.0"
tracing = { version = "0.1.40", features = ["release_max_level_info"] }
wgpu = "0.19.3"

[features]
dcache = []
profiling = []
